# NoiseCanceller

./: CMakeLists.txt  README.md  erreurs.txt
src/: NoiseCanceller.cpp  NoiseInverter.cpp  NoiseInverter.h  main.cpp
